Add rolling update policies to autoscaling groups

--- a/master.yml
+++ b/master.yml
@@ -320,6 +320,16 @@ Resources:
         - Key: Name
           Value: !Sub ${ClusterName}-master
           PropagateAtLaunch: true
+    UpdatePolicy:
+      AutoScalingRollingUpdate:
+        MaxBatchSize: 1
+        SuspendProcesses:
+          - HealthCheck
+          - ReplaceUnhealthy
+          - AZRebalance
+          - AlarmNotification
+          - ScheduledActions
+          - AddToLoadBalancer
 
   Volume1:
     Type: AWS::EC2::Volume
