--- a/master.yml
+++ b/master.yml
@@ -24,6 +24,7 @@ Parameters:
   ImageId:
     Description: ID of AMI used for instances
     Type: AWS::EC2::Image::Id
+    Default: ami-078a4afa034f007e0
   InstanceType:
     Description: Type of EC2 instance
     Type: String
