--- a/master.yml
+++ b/master.yml
@@ -85,12 +85,14 @@ Parameters:
     Description: Docker image containing kube-scheduler
     Type: String
     Default: gcr.io/google_containers/kube-scheduler:v1.8.7
-  EtcdVersion:
-    Description: Version of etcd
+  EtcdImage:
+    Description: Docker image containing etcd
     Type: String
-  KubeRouterVersion:
-    Description: Version of kube-router
+    Default: gcr.io/google_containers/etcd:3.0.17
+  KubeRouterImage:
+    Description: Docker image containing kube-router
     Type: String
+    Default: cloudnativelabs/kube-router:v0.0.20
 
 Mappings:
   LambdaUrls:
@@ -417,7 +419,7 @@ Resources:
                   Environment=AWS_REGION=${AWS::Region}
                   Environment=KEIGHTS_DOMAIN=k8s.local
                   Environment=KEIGHTS_ETCD_CLUSTER_TOKEN=etcd-${ClusterName}
-                  Environment=KEIGHTS_ETCD_IMAGE=gcr.io/google_containers/etcd:${EtcdVersion}
+                  Environment=KEIGHTS_ETCD_IMAGE=${EtcdImage}
                   Environment=KEIGHTS_PREFIX=${ClusterName}
 
               - path: /etc/systemd/system/keights-templatize-kube-apiserver.service.d/environment.conf
@@ -482,7 +484,7 @@ Resources:
                 permissions: '0644'
                 content: |
                   [Service]
-                  Environment=KEIGHTS_KUBE_ROUTER_IMAGE=cloudnativelabs/kube-router:v${KubeRouterVersion}
+                  Environment=KEIGHTS_KUBE_ROUTER_IMAGE=${KubeRouterImage}
 
               - path: /etc/systemd/system/kube-router-kubeconfig.service.d/environment.conf
                 owner: root:root
