Add wait loops for file to exist
These are put in place to "supplement" systemd's head-scratching
ordering of services. Intermittent failures occur on reading from
files that should have been created by services which should
have already run.

--- a/fpm/usr/lib/systemd/system/keights-bootstrap-kubeconfig.service
+++ b/fpm/usr/lib/systemd/system/keights-bootstrap-kubeconfig.service
@@ -6,6 +6,10 @@ Type=oneshot
 # Environment=KEIGHTS_CLUSTER_NAME=
 # Environment=KEIGHTS_DOMAIN=
 ExecStart=/usr/bin/flock /run/kubernetes/.kubectl.lock -c ' \
+    while true; do \
+      [ -f /run/kubernetes/bootstrap-token ] && break; \
+      sleep 1; \
+    done; \
     kubeconfig=/run/kubernetes/bootstrap.kubeconfig; \
     user=kubelet-bootstrap; \
     kubectl config set-cluster ${KEIGHTS_CLUSTER_NAME} \
