--- a/fpm/usr/lib/systemd/system/keights-bootstrap-token.service
+++ b/fpm/usr/lib/systemd/system/keights-bootstrap-token.service
@@ -6,6 +6,10 @@ After=keights-bootstrap-token-splitter.service keights-prekubelet.service
 [Service]
 Type=oneshot
 ExecStart=/bin/sh -c ' \
+    while true; do \
+      [ -f /run/kubernetes/bootstrap-token-id ] && break; \
+      sleep 1; \
+    done; \
     token_id=`cat /run/kubernetes/bootstrap-token-id`; \
     while true; do \
         kubectl -n kube-system \
