--- a/fpm/usr/lib/systemd/system/keights-kubectl-create.service
+++ b/fpm/usr/lib/systemd/system/keights-kubectl-create.service
@@ -6,6 +6,10 @@ After=keights-prekubelet.service
 [Service]
 Type=oneshot
 ExecStart=/usr/bin/flock /run/kubernetes/.kubectl.lock -c ' \
+    while true; do \
+      [ -f /run/keights-collector/asg ] && break; \
+      sleep 1; \
+    done; \
     myip=`curl -s http://169.254.169.254/latest/meta-data/local-ipv4`; \
     for entry in `cat /run/keights-collector/asg`; do \
         index=`echo $${entry} | cut -d : -f 1`; \
