--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ sudo: false
 language: go
 go: 1.9
 install:
-  - curl -LO https://github.com/goreleaser/goreleaser/releases/download/v0.61.1/goreleaser_Linux_x86_64.tar.gz
-  - tar -C /tmp -zxf goreleaser_Linux_x86_64.tar.gz goreleaser
+  - curl -L -o /tmp/goreleaser.tar.gz https://github.com/goreleaser/goreleaser/releases/download/v0.61.1/goreleaser_Linux_x86_64.tar.gz
+  - tar -C /tmp -zxf /tmp/goreleaser.tar.gz goreleaser
   - gem install fpm
   - export PATH=${GOPATH}/bin:${PATH}
 script:
