Pass API server as hostname instead of constructing it
This allows for more flexibility in how nodes receive the hostname.
Nodes will now be changed to use the load balancer to talk to the
apiserver, and no longer have to write `/etc/hosts`.

--- a/fpm/usr/lib/systemd/system/keights-bootstrap-kubeconfig.service
+++ b/fpm/usr/lib/systemd/system/keights-bootstrap-kubeconfig.service
@@ -4,7 +4,7 @@ Description=keights-bootstrap-kubeconfig service
 [Service]
 Type=oneshot
 # Environment=KEIGHTS_CLUSTER_NAME=
-# Environment=KEIGHTS_DOMAIN=
+# Environment=KEIGHTS_K8S_SERVER=
 ExecStart=/usr/bin/flock /run/kubernetes/.kubectl.lock -c ' \
     while true; do \
       [ -f /run/kubernetes/bootstrap-token ] && break; \
@@ -14,7 +14,7 @@ ExecStart=/usr/bin/flock /run/kubernetes/.kubectl.lock -c ' \
     user=kubelet-bootstrap; \
     kubectl config set-cluster ${KEIGHTS_CLUSTER_NAME} \
       --certificate-authority=/run/kubernetes/pki/ca.crt \
-      --server=https://api-${KEIGHTS_CLUSTER_NAME}.${KEIGHTS_DOMAIN}:6443 \
+      --server=https://${KEIGHTS_K8S_SERVER} \
       --kubeconfig=$${kubeconfig}; \
     kubectl config set-context $${user}@${KEIGHTS_CLUSTER_NAME} \
       --cluster=${KEIGHTS_CLUSTER_NAME} \
