--- a/fpm/usr/lib/systemd/system/kube-router-kubeconfig.service
+++ b/fpm/usr/lib/systemd/system/kube-router-kubeconfig.service
@@ -4,13 +4,13 @@ Description=kube-router-kubeconfig service
 [Service]
 Type=oneshot
 # Environment=KEIGHTS_CLUSTER_NAME=
-# Environment=KEIGHTS_DOMAIN=
+# Environment=KEIGHTS_K8S_SERVER=
 ExecStart=/usr/bin/flock /run/kubernetes/.kubectl.lock -c ' \
     kubeconfig=/var/lib/kube-router/kubeconfig; \
     user=kube-router; \
     kubectl config set-cluster ${KEIGHTS_CLUSTER_NAME} \
       --certificate-authority=/run/kubernetes/pki/ca.crt \
-      --server=https://api-${KEIGHTS_CLUSTER_NAME}.${KEIGHTS_DOMAIN}:6443 \
+      --server=https://${KEIGHTS_K8S_SERVER} \
       --kubeconfig=$${kubeconfig}; \
     kubectl config set-context $${user}@${KEIGHTS_CLUSTER_NAME} \
       --cluster=${KEIGHTS_CLUSTER_NAME} \
